force-app/main/default/objects/Client_Summary_Report__c/Client_Summary_Report__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Client Summary Report</label>
</CustomObject>