force-app/main/default/objects/Client_Summary_Report__c/fields/Client_Summary_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Client_Summary_Email_Body__c</fullName>
    <formula>$Setup.Client_Summary_Report__c.Email_Body__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Summary Email Body</label>
    <type>Text</type>
</CustomField>