force-app/main/default/objects/Client_Summary_Report__c/fields/Conductor_Id__c.field-meta.xml
<CustomField>
    <fullName>Conductor_Id__c</fullName>
    <label>Conductor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>