force-app/main/default/objects/Client_Summary_Report__c/fields/Conga_Send_Client_Summary_Report__c.field-meta.xml
<CustomField>
    <fullName>Conga_Send_Client_Summary_Report__c</fullName>
    <formula>SUBSTITUTE( Conga_Client_Summary_Report__c , &quot;&amp;qmode=Attachments&quot;, &quot;&amp;qmode=SendEmail&quot;) &amp;  
&quot;&amp;CongaEmailTemplateId=a0oL00000059YYNIA2&quot;&amp;
&quot;&amp;EmailToId=&quot; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Send Client Summary Report</label>
    <type>Text</type>
</CustomField>