force-app/main/default/objects/Client_Summary_Report__c/fields/Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Email_Body__c</fullName>
    <label>Email Body</label>
    <type>TextArea</type>
</CustomField>