force-app/main/default/objects/Client_Summary_Report__c/fields/Query_Selector__c.field-meta.xml
<CustomField>
    <fullName>Query_Selector__c</fullName>
    <label>Query Selector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>